# aisuru-pp-py

./: Cargo.toml  README.md  pyproject.toml
src/: lib.rs
tests/: akatsuki zukuyo.osu  amatsuki.osu  arsonist.osu  carry me away.osu  glorious morning.osu  sickness.osu  test.py  union.osu
