[package]
name = "aisuru-pp-py"
version = "0.4.1"
description = "osu! difficulty and pp calculation for all modes"
authors = ["Max Ohn <ohn.m@hotmail.de>", "tsunyoku <tsunyoku@gmail.com>"]
license = "MIT"
edition = "2018"

[lib]
name = "aisuru_pp_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.15.1", features = ["macros", "extension-module"] }
aisuru-pp = { git = "https://github.com/osuAisuru/aisuru-pp", version = "0.5.3" }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3